--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.search_box{
+  text-align: right;
+  margin-bottom: 20px;
+}
+.search_box .MuiFormControl-root{
+  width: 25%;
+}
