--- a/src/App.css
+++ b/src/App.css
@@ -43,3 +43,13 @@
   color: red;
   margin: 0;
 }
+
+.dark{
+  background: black;
+  color: white;
+}
+
+.light{
+  background: white;
+  color: black;
+}
